--- a/CodeFirstDemo/CodeFirstDemo/App.config
+++ b/CodeFirstDemo/CodeFirstDemo/App.config
@@ -17,4 +17,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="BlogDbContext" connectionString ="data source=.; initial catalog=CodeFirstDemo; integrated security=SSPI" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
