--- a/CodeFirst/CodeFirst/CodeFirst.csproj
+++ b/CodeFirst/CodeFirst/CodeFirst.csproj
@@ -94,6 +94,10 @@
     <Compile Include="Migrations\201811212344040_PopulateCategoriesTable.Designer.cs">
       <DependentUpon>201811212344040_PopulateCategoriesTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811220130512_foo.cs" />
+    <Compile Include="Migrations\201811220130512_foo.Designer.cs">
+      <DependentUpon>201811220130512_foo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PlutoContext.cs" />
     <Compile Include="Program.cs" />
@@ -134,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201811212344040_PopulateCategoriesTable.resx">
       <DependentUpon>201811212344040_PopulateCategoriesTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811220130512_foo.resx">
+      <DependentUpon>201811220130512_foo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
